--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,38 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.soporte{
+    background-color: black;
+    height: 100px;
+    width: 20px;
+    display: block;
+    margin:auto;
+}
+.semaforo{
+    background-color: black;
+    border-radius: 5px;
+    padding: 10px;
+    display: inline-block;
+    margin:auto;
+}
+.red{
+    background-color: red;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+.yellow{
+    background-color: yellow;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+.green{
+    background-color: green;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
+.iluminado{
+    box-shadow: 0 0 30px 10px #fff;
+}
